Makes year1 image scalable on mobile + fixes homepage image positioning

--- a/assets/styles/pages/homepage.less
+++ b/assets/styles/pages/homepage.less
@@ -129,12 +129,12 @@ font-size: @font-size-homepage-normal;
   .homepage-header-image {
     position: absolute;
     background-image: url('../images/homepage/homepage_photo_032017.png');
-    background-position: bottom left;
+    background-position: bottom 0px left 100px;
     background-repeat: no-repeat;
     background-size: @container-homepage-lead-height;
     bottom: 0;
     height: @container-homepage-lead-height;
-    right: -100px;
+    right: 0;
     width: 60%;
 
     @media (max-width: @screen-md-max) {
